syntax = "proto3";

package inferencer;

service Inferencer {
    rpc PredictProba (Request) returns (Response);
}

message Request {
    uint64 banner_id = 1;
    uint64 zone_id = 2;
    string geo = 3;
    uint64 browser = 4;
    string os_version = 5;
    uint64 platform = 6;
}

message Response {
    double proba = 1;
    double confidence = 2;
}